--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>SPY × FAMILY</title>
 
@@ -15,7 +15,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="SPYxFAMILY" />
-  <link rel="apple-touch-icon" href="/vite.svg" />
+  <link rel="apple-touch-icon" href="/logo.svg" />
 </head>
 
 <body class="overflow-y-scroll overscroll-none select-none">
